@@ -12,3 +12,4 @@ dist = Dist-Zilla-PluginBundle-ARODLAND
 Dist::Zilla = 6
 Dist::Zilla::Plugin::ModuleBuildTiny = 0
 Dist::Zilla::Plugin::Prereqs::FromCPANfile = 0
+Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
