@@ -1,4 +1,5 @@
 {{$NEXT}}
+  * Replace ReadmeFromPod with ReadmeAnyFromPod to really fix README issues
 
 Version 0.10: 2017-06-02
   * Add prereqs = cpanfile to support getting prereqs from cpanfile.
